#---Adding all extended examples subdirectories explicitly 

cmake_minimum_required(VERSION 3.8...3.18)
if(${CMAKE_VERSION} VERSION_LESS 3.12)
  cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
endif()

add_subdirectory(analysis)
add_subdirectory(biasing)
add_subdirectory(common)
add_subdirectory(electromagnetic)
add_subdirectory(errorpropagation)
add_subdirectory(eventgenerator)
add_subdirectory(exoticphysics)
add_subdirectory(field)
add_subdirectory(g3tog4)
add_subdirectory(geometry)
add_subdirectory(hadronic)
add_subdirectory(medical)
add_subdirectory(optical)
add_subdirectory(parallel)
add_subdirectory(parameterisations)
add_subdirectory(persistency)
add_subdirectory(physicslists)
add_subdirectory(polarisation)
add_subdirectory(radioactivedecay)
add_subdirectory(runAndEvent)
add_subdirectory(visualization)
