#---Adding all extended examples subdirectories explicitly 

cmake_minimum_required(VERSION 3.16...3.21)

add_subdirectory(analysis)
add_subdirectory(biasing)
add_subdirectory(common)
add_subdirectory(electromagnetic)
add_subdirectory(errorpropagation)
add_subdirectory(eventgenerator)
add_subdirectory(exoticphysics)
add_subdirectory(field)
add_subdirectory(g3tog4)
add_subdirectory(geometry)
add_subdirectory(hadronic)
add_subdirectory(medical)
add_subdirectory(optical)
add_subdirectory(parallel)
add_subdirectory(parameterisations)
add_subdirectory(persistency)
add_subdirectory(physicslists)
add_subdirectory(polarisation)
add_subdirectory(radioactivedecay)
add_subdirectory(runAndEvent)
add_subdirectory(visualization)
